@@ -7,3 +7,5 @@ Normal: As you would expect.
 SAD (Search and Destroy): Pets will roam and seek out things to attack.
 
 Defend:  Pets will try to stay close and defend you.
+
+Arena: As normal, except that pets will attack other players in the arena.
